--- a/Round3/file1.Rmd
+++ b/Round3/file1.Rmd
@@ -13,7 +13,6 @@ file.name <- "file1"
 setwd('~/workspace/permuting_accuracy/Round3/')
 
 balance <- TRUE   # set for TRUE for balanced folding ana refolding.
-n.replications <-  1e2
 large.sample <- 1e2
 p <- 23*large.sample
 n <- 40*large.sample # total sample size-> n/2 in each group.
@@ -21,11 +20,11 @@ n.permutations <- 1e2
 n.folds <- 2
 
 source('Gilron Effect of Cross Validatino.R')
+n.replications <-  1.5e2
 
 effects <- seq(0, 0.5, length=3) # change in location
 
-Sigma <- diag(p)
-# lattice::levelplot(Sigma)
+Sigma <- diag(p) 
 direction0 <- rep(1,p)
 maha <- direction0 %*% solve(Sigma) %*% direction0 %>% c
 direction <- 23 * direction0 / sqrt(n/2*maha)
@@ -35,7 +34,7 @@ direction <- 23 * direction0 / sqrt(n/2*maha)
 ## Fixed folds. Cross-Validated. All in one.
 ```{r}
 RhpcBLASctl::blas_set_num_threads(1)
-registerDoMC(cores=30)
+registerDoMC(cores=50)
 ```
 
 ```{r independent noise variable folds}
@@ -45,7 +44,8 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     labels <- sample(c(rep(TRUE, n/2), rep(FALSE,n/2))) # group assignemt labels
     
     ## Gaussian noise
-    .noise <- rmvnorm(n=n, sigma = Sigma)
+    # system.time(rmvnorm(n=n, sigma = Sigma))
+    .noise <- matrix(zrnorm(n*p), ncol = p, nrow=n)
     
     ## Shift alternative:
     # effect <- effects[[3]]
@@ -63,7 +63,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     # capture.output(table(fold.ids, labels), file=balance.log, append = TRUE)
     
     # Observables 
-    ts <- statisticsLargeSample(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
+    ts <- statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
     
     # Prepare to permute
     old.labels <- labels
@@ -80,7 +80,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       x1 <- noise[labels,]
       x2 <- noise[!labels,]
       
-      permuted[i,] <- statisticsLargeSample(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
+      permuted[i,] <- statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
     } # End permutation
     
     # Compute p-vals for each statistic
