--- a/Round4/file2.Rmd
+++ b/Round4/file2.Rmd
@@ -8,15 +8,19 @@ editor_options:
 ---
 
 
+```{r}
+n.permutations <- 4e2
+n.replications <-  5e2
+```
+
+
 ```{r preliminaries}
 file.name <- "file2"
 setwd('~/workspace/permuting_accuracy/Round4/')
-n.replications <-  1e3
 
 balance <- TRUE   # set for TRUE for balanced folding ana refolding.
 p <- 23
 n <- 4e1 # total sample size-> n/2 in each group.
-n.permutations <- 4e2
 n.folds <- 4
 
 source('Gilron Effect of Cross Validatino.R')
@@ -69,8 +73,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
                     Sigma.inv = Sigma.inv, 
                     noise = noise, 
                     labels = labels, 
-                    fold.ids = fold.ids, 
-                    shift.vec = effect*direction)
+                    fold.ids = fold.ids)
     
     # Prepare to permute
     old.labels <- labels
@@ -92,8 +95,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
                                  Sigma.inv =Sigma.inv, 
                                  noise = noise,
                                  labels = labels,
-                                 fold.ids = fold.ids, 
-                                 shift.vec = effect*direction)
+                                 fold.ids = fold.ids)
     } # End permutation
     
     # Compute p-vals for each statistic
@@ -109,7 +111,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
 } 
 
 pbPost(type = "note", body = "File2", title = the.message)
-save.image(file=paste(file.name,".RData", sep=''))
+# save.image(file=paste(file.name,".RData", sep=''))
 ```
 
 
