--- a/Round4/file40.Rmd
+++ b/Round4/file40.Rmd
@@ -8,8 +8,8 @@ editor_options:
 ---
 
 ```{r}
-n.permutations <- 2e2
-n.replications <-  3e2
+n.permutations <- 3e2
+n.replications <-  5e2
 ```
 
 
@@ -17,7 +17,6 @@ n.replications <-  3e2
 file.name <- "file40"
 setwd('~/workspace/permuting_accuracy/Round4/')
 
-balance <- TRUE   # set for TRUE for balanced folding ana refolding.
 p <- 23
 n <- 4e1 # total sample size-> n/2 in each group.
 n.folds <- 4
@@ -42,18 +41,17 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
   foreach(effect=effects, .combine=rbind)  %do% {
     
     ## Gaussian noise
-    noise <- matrix(dqrnorm(n*p), ncol=p, nrow=n)
+    noise <- matrix(rnorm(n*p), ncol=p, nrow=n)
 
     ## Logistic regression
+    # effect <- effects[[3]]
     beta <- beta0*effect
     link <- noise%*%beta
     probs <- plogis(link)
+    # plot(probs, type='h')
     
     # Force balanced groups:
     labels <- c(TRUE,FALSE)[rbinom(n,1, probs)+1] # group assignemt labels
-    while(sum(labels)!=n/2){
-      labels <- c(TRUE,FALSE)[rbinom(n,1, probs)+1] # group assignemt labels
-    }
     
     ## Compute observed statistic
     x1 <- noise[labels,]
@@ -61,7 +59,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     # plot(colMeans(x1)~colMeans(x2), xlim=c(-3,3), ylim=c(-3,3)); abline(0,1,lty=2, v=0, h=0)
     
     ## Asign observations to folds. Use the simple label structure to balance folds.
-    fold.ids <- balanced_folding(labels, n.folds, balance = balance)
+    fold.ids <- balanced_folding(labels, n.folds, balance = FALSE)
     # capture.output(table(fold.ids, labels), file=balance.log, append = TRUE)
     
     # Observables 
