--- a/Round4/Manuscript/permutaing_accuracy.tex
+++ b/Round4/Manuscript/permutaing_accuracy.tex
@@ -1,6 +1,6 @@
 \documentclass[]{bio}
 %\documentclass[oupdraft]{bio}
-\usepackage[colorlinks=true, urlcolor=citecolor, linkcolor=citecolor, citecolor=citecolor]{hyperref}
+%\usepackage[colorlinks=true, urlcolor=citecolor, linkcolor=citecolor, citecolor=citecolor]{hyperref}
 
 % Add history information for the article if required
 \history{xxx}
@@ -1078,12 +1078,15 @@ As put by \cite{ramdas_classification_2016}:
 \end{quote}
 
 
+\section{Supplementary Material}
+TODO
+
 
 
 % use section* for acknowledgment
 \section*{Acknowledgment}
 JDR wishes to thank, Jesse B.A. Hemerik, Yakir Brechenko, Omer Shamir, Joshua Vogelstein, Gilles Blanchard, and Jason Stein for their valuable inputs. 
-JDR also thanks ISF grant 924/16 for the computing infrastructure used in this research. 
+JDR also thanks ISF grant 900/16 and 924/16. 
 
 
 \newpage
