--- a/Round4/Manuscript/preamble.tex
+++ b/Round4/Manuscript/preamble.tex
@@ -6,14 +6,14 @@
 \usepackage{graphicx}
 \usepackage{todonotes} % for grayed boxes
 %\usepackage{natbib}
-%\usepackage{url}
+\usepackage{url}
 \usepackage[boxruled,vlined,linesnumbered]{algorithm2e}
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{lineno}
 \usepackage{tcolorbox}
-\AtBeginDocument{\let\textlabel\label}
-\hypersetup{colorlinks=true,linkcolor=black,citecolor=black,filecolor=black,urlcolor=black}
+%\AtBeginDocument{\let\textlabel\label}
+%\hypersetup{colorlinks=true,linkcolor=black,citecolor=black,filecolor=black,urlcolor=black}
 \usepackage{wasysym}
 
 %\usepackage[perpage]{footmisc}
